Add support for version specific JVM configuration options